ghc-4335c07/testsuite/tests/rename/should_fail/T9436.hs
{-# LANGUAGE RecordWildCards #-}

module T9436 where

data T = T { x :: Int }

f :: T -> Int
f (T' { .. }) = x + 1
